<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="br.com.ifrs.meuifpoa.HomeFragment"
        android:label="Inicio"
        android:icon="@drawable/ic_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/notasFragment"
        android:name="br.com.ifrs.meuifpoa.NotasFragment"
        android:label="@string/notas_bar"
        tools:layout="@layout/fragment_notas"/>

    <fragment
        android:id="@+id/noticiasFragment"
        android:name="br.com.ifrs.meuifpoa.NoticiasFragment"
        android:label="@string/noticias_bar"
        tools:layout="@layout/fragment_noticias"/>

    <fragment
        android:id="@+id/perfilFragment"
        android:name="br.com.ifrs.meuifpoa.PerfilFragment"
        android:label="@string/perfil_bar"
        tools:layout="@layout/fragment_perfil" />

</navigation>
