<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp"
    android:layout_margin="4dp"
    android:background="@drawable/rounded_background"
    >

    <TextView
        android:id="@+id/textCodDisciplinaListNotas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Código da Disciplina"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textNomeDisciplinaListNotas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Nome da Disciplina"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/textCodDisciplinaListNotas"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <View
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginTop="8dp"
        android:textStyle="bold"
        android:background="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textNomeDisciplinaListNotas" />

    <LinearLayout
        android:id="@+id/unitContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textNomeDisciplinaListNotas">

        <!-- Unidade 1 -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="8dp"
            android:background="@drawable/border_shape_inner_aprovado"
            android:gravity="center"
            android:orientation="vertical"
            android:backgroundTint="@color/white">

            <TextView
                android:id="@+id/textTituloUnidade1Notas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/txtViewUnidade1"
                android:textSize="10sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textNota1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                tools:text="9,9"
                android:textSize="40sp"
                android:textStyle="bold"/>
        </LinearLayout>

        <!-- Unidade 2 -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/border_shape_inner_aprovado"
            android:gravity="center"
            android:orientation="vertical"
            android:backgroundTint="@color/white">

            <TextView
                android:id="@+id/textTituloUnidade2Notas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/txtViewUnidade2"
                android:textSize="10sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textNota2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                tools:text="9,9"
                android:textSize="40sp"
                android:textStyle="bold"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/recoveryResultContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/unitContainer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal">

        <!-- Recuperação -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_marginEnd="8dp"
            android:gravity="center"
            android:background="@drawable/border_shape_inner_aprovado"
            android:backgroundTint="@color/white">

            <TextView
                android:id="@+id/textTituloRecuperacaoNotas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtViewRecuperacao"
                android:textSize="10sp"
                android:textStyle="bold"
                android:gravity="center"/>

            <TextView
                android:id="@+id/textRecuperacao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="9,9"
                android:textSize="40sp"
                android:textStyle="bold"
                android:gravity="center"/>
        </LinearLayout>

        <!-- Resultado -->
        <LinearLayout
            android:id="@+id/resultadoContainer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@drawable/border_shape_inner_aprovado">

            <TextView
                android:id="@+id/textTituloResultadoNotas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtViewResultado"
                android:textSize="10sp"
                android:textStyle="bold"
                android:gravity="center"/>

            <TextView
                android:id="@+id/textResultado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="9,9"
                android:textSize="40sp"
                android:textStyle="bold"
                android:gravity="center"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="50dp"
        android:layout_height="19dp"
        android:layout_marginTop="12dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recoveryResultContainer" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recoveryResultContainer">

        <TextView
            android:id="@+id/textFaltas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/txtViewFaltas"
            android:textStyle="bold"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textFaltasValor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginLeft="4dp"
            tools:text="120"
            android:textStyle="bold"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtViewSituacao"
            android:textStyle="bold"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textSituacaoValor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginLeft="4dp"
            tools:text="Aprovado"
            android:textStyle="bold"
            android:textSize="14sp" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
